remove Lasagne theme

--- a/src/index.css
+++ b/src/index.css
@@ -1,57 +1,3 @@
 @import "tailwindcss";
 
-@theme {
-  --font-weight-*: initial;
-  --font-weight-normal: 400;
-  --font-weight-semibold: 500;
-  --font-weight-bold: 600;
-  --font-weight-black: 700;
-
-  --text-*: initial;
-  --text-xs: clamp(0.6914rem, 0.69rem + 0.0055vi, 0.6944rem);
-  --text-xs--line-height: 1.5;
-  --text-sm: clamp(0.7778rem, 0.7534rem + 0.0999vi, 0.8333rem);
-  --text-sm--line-height: 1.5;
-  --text-base: clamp(0.875rem, 0.8202rem + 0.2247vi, 1rem);
-  --text-base--line-height: 1.5;
-  --text-lg: clamp(0.9844rem, 0.8899rem + 0.3876vi, 1.2rem);
-  --text-lg--line-height: 1.5;
-  --text-xl: clamp(1.1074rem, 0.9617rem + 0.5979vi, 1.44rem);
-  --text-xl--line-height: 1.5;
-  --text-2xl: clamp(1.2458rem, 1.0346rem + 0.8668vi, 1.728rem);
-  --text-2xl--line-height: 1.5;
-  --text-3xl: clamp(1.4016rem, 1.1071rem + 1.2081vi, 2.0736rem);
-  --text-3xl--line-height: 1.5;
-  --text-4xl: clamp(1.5768rem, 1.1773rem + 1.6387vi, 2.4883rem);
-  --text-4xl--line-height: 1.5;
-
-  --spacing-*: initial;
-  --spacing-0: 0px;
-  --spacing-none: 0px;
-  --spacing-3xs: clamp(4px, 4px + 0vi, 4px);
-  --spacing-2xs: clamp(7px, 6.5618px + 0.1124vi, 8px);
-  --spacing-xs: clamp(11px, 10.5618px + 0.1124vi, 12px);
-  --spacing-sm: clamp(14px, 13.1236px + 0.2247vi, 16px);
-  --spacing-md: clamp(21px, 19.6854px + 0.3371vi, 24px);
-  --spacing-lg: clamp(28px, 26.2472px + 0.4494vi, 32px);
-  --spacing-xl: clamp(42px, 39.3708px + 0.6742vi, 48px);
-  --spacing-2xl: clamp(56px, 52.4944px + 0.8989vi, 64px);
-  --spacing-3xl: clamp(84px, 78.7416px + 1.3483vi, 96px);
-  --spacing-full: 100%;
-
-  --radius-*: initial;
-  --radius-none: 0px;
-  --radius-sm: clamp(4px, 4px + 0vi, 4px);
-  --radius-md: clamp(11px, 10.5618px + 0.1124vi, 12px);
-  --radius-lg: clamp(21px, 19.6854px + 0.3371vi, 24px);
-  --radius-xl: clamp(28px, 26.2472px + 0.4494vi, 32px);
-  --radius-full: 9999px;
-
-  --shadow-*: initial;
-  --shadow-sm: 0px 2px 3px 0px rgba(59, 46, 129, 0.04);
-  --shadow-md: 0px 1px 8px 0px rgba(59, 46, 129, 0.06);
-  --shadow-lg: 0px 5px 15px 0px rgba(59, 46, 129, 0.08);
-  --shadow-xl: 0px 2px 25px 0px rgba(59, 46, 129, 0.08);
-  --shadow-inner: 0px 0px 5px 0px rgba(59, 46, 129, 0.09) inset;
-  --shadow-none: 0 0 #0000;
-}
+/* @theme {} */
