--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
-@custom-variant spring (&:where([data-theme="spring"] *));
-@custom-variant summer (&:where([data-theme="summer"] *));
-@custom-variant autumn (&:where([data-theme="autumn"] *));
-@custom-variant winter (&:where([data-theme="winter"] *));
+@custom-variant neo (&:where([data-theme="neomorphism"] *));
+@custom-variant cartoon (&:where([data-theme="cartoon"] *));
 
 @theme {
   /* Font families*/
   --font-cartoon: "Luckiest Guy", cursive;
+  --font-neo: "Montserrat", sans-serif;
 
   /* Font weights */
   --font-weight-*: initial;
@@ -38,8 +38,6 @@
   --color-white: #ffffff;
   --color-black: #000000;
 
-  /* Default theme is autumn */
-  /* See https://coolors.co/palettes/popular/autumn */
   --color-primary: #264653;
   --color-background: #e76f51;
   --color-background-2: #e9c46a;
@@ -73,7 +71,17 @@
   --shadow-*: initial;
   --shadow-xs: 3px 2px 2px rgba(0, 0, 0, 0.25);
   --shadow-sm: 6px 4px 2px rgba(0, 0, 0, 0.25);
-  --shadow: 18px 14px 2px rgba(0, 0, 0, 0.25);
+  --shadow-md: 18px 14px 2px rgba(100, 100, 100, 0.25);
+
+  --shadow-outer-md: 0.3rem 0.3rem 0.6rem var(--color-primary),
+    -0.2rem -0.2rem 0.5rem var(--color-white);
+  --shadow-outer-lg: -14px -14px 30px var(--color-white),
+    14px 14px 30px var(--color-primary);
+
+  --shadow-inner-sm: inset -1px -1px 1px 0 rgba(255, 255, 255, 0.8),
+    inset 1px 1px 1px 0 var(--color-primary);
+  --shadow-inner-md: inset 0.2rem 0.2rem 0.5rem var(--color-primary),
+    inset -0.2rem -0.2rem 0.5rem var(--color-white);
 
   /* Text shadows */
   --text-shadow-*: initial;
@@ -83,39 +91,31 @@
     0 -2px rgba(0, 0, 0, 0.25);
 }
 
-[data-theme="winter"] {
+[data-theme="neomorphism"] {
+  * {
+    font-family: var(--font-neo);
+  }
+
   /* See https://coolors.co/palettes/popular/winter */
-  --color-primary: #022225;
-  --color-background: #93241b;
-  --color-background-2: #eae3d0;
-  --color-secondary-1: #495d57;
-  --color-secondary-2: #4c383f;
+  --color-black: #2b2e31;
+  --color-primary: #d1d9e6;
+  --color-background: #ecf0f3;
+  --color-background-2: #b7bbbe;
+  --color-secondary-1: #85898b;
+  --color-secondary-2: #565a5c;
+  --color-light: #ffffff;
 }
 
-[data-theme="spring"] {
-  /* See https://coolors.co/palettes/popular/spring */
-  --color-one: #f6bd60;
-  --color-two: #f7ede2;
-  --color-three: #f5cac3;
-  --color-four: #84a59d;
-  --color-five: #f28482;
-}
+[data-theme="cartoon"] {
+  .cartoon-title {
+    font-family: var(--font-cartoon);
+    transition: all 0.5s ease;
+    cursor: pointer;
+    color: var(--color-light);
+    font-weight: var(--font-weight-bold);
+  }
 
-[data-theme="summer"] {
-  /* See https://coolors.co/palettes/popular/summer */
-  --color-primary: #cb997e;
-  --color-background: #e3e8be;
-  --color-background-2: #f8f2cb;
-  --color-secondary-1: #faedcd;
-  --color-secondary-2: #b6c190;
-}
-
-.cartoon-title {
-  font-family: var(--font-cartoon);
-  transition: all 0.5s ease;
-  cursor: pointer;
-}
-
-.cartoon-title:hover {
-  transform: scale(114%);
+  .cartoon-title:hover {
+    transform: scale(114%);
+  }
 }
