--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
 @import "tailwindcss";
 
 @custom-variant neo (&:where([data-theme="neomorphism"] *));
@@ -7,8 +8,9 @@
 
 @theme {
   /* Font families*/
-  --font-cartoon: "Luckiest Guy", cursive;
+  --font-cartoon-title: "Luckiest Guy", cursive;
   --font-neo: "Montserrat", sans-serif;
+  --font-cartoon: "Lexend", sans-serif;
 
   /* Font weights */
   --font-weight-*: initial;
@@ -69,9 +71,9 @@
 
   /* Shadows */
   --shadow-*: initial;
-  --shadow-xs: 3px 2px 2px rgba(0, 0, 0, 0.25);
-  --shadow-sm: 6px 4px 2px rgba(0, 0, 0, 0.25);
-  --shadow-md: 18px 14px 2px rgba(100, 100, 100, 0.25);
+  --shadow-xs: 3px 2px 0 rgba(0, 0, 0, 0.25);
+  --shadow-sm: 4px 4px 0 rgba(0, 0, 0, 0.25);
+  --shadow-md: 15px 12px 0 rgba(100, 100, 100, 0.25);
 
   --shadow-outer-md: 0.3rem 0.3rem 0.6rem var(--color-primary),
     -0.2rem -0.2rem 0.5rem var(--color-white);
@@ -92,9 +94,7 @@
 }
 
 [data-theme="neomorphism"] {
-  * {
-    font-family: var(--font-neo);
-  }
+  font-family: var(--font-neo);
 
   /* See https://coolors.co/palettes/popular/winter */
   --color-black: #2b2e31;
@@ -107,8 +107,10 @@
 }
 
 [data-theme="cartoon"] {
+  font-family: var(--font-cartoon);
+
   .cartoon-title {
-    font-family: var(--font-cartoon);
+    font-family: var(--font-cartoon-title) !important;
     transition: all 0.5s ease;
     cursor: pointer;
     color: var(--color-light);
@@ -117,5 +119,15 @@
 
   .cartoon-title:hover {
     transform: scale(114%);
+  }
+
+  .pushButton {
+    transition-property: transform, box-shadow;
+    transition-duration: 100ms;
+  }
+
+  .pushButton:hover {
+    transform: translateX(4px) translateY(4px);
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
   }
 }
