--- a/src/index.css
+++ b/src/index.css
@@ -75,20 +75,24 @@
   --shadow-sm: 4px 4px 0 rgba(0, 0, 0, 0.25);
   --shadow-md: 15px 12px 0 rgba(100, 100, 100, 0.25);
 
-  --shadow-outer-md: 0.3rem 0.3rem 0.6rem var(--color-primary),
+  --shadow-outer-md:
+    0.3rem 0.3rem 0.6rem var(--color-primary),
     -0.2rem -0.2rem 0.5rem var(--color-white);
-  --shadow-outer-lg: -14px -14px 30px var(--color-white),
-    14px 14px 30px var(--color-primary);
+  --shadow-outer-lg:
+    -14px -14px 30px var(--color-white), 14px 14px 30px var(--color-primary);
 
-  --shadow-inner-sm: inset -1px -1px 1px 0 rgba(255, 255, 255, 0.8),
+  --shadow-inner-sm:
+    inset -1px -1px 1px 0 rgba(255, 255, 255, 0.8),
     inset 1px 1px 1px 0 var(--color-primary);
-  --shadow-inner-md: inset 0.2rem 0.2rem 0.5rem var(--color-primary),
+  --shadow-inner-md:
+    inset 0.2rem 0.2rem 0.5rem var(--color-primary),
     inset -0.2rem -0.2rem 0.5rem var(--color-white);
 
   /* Text shadows */
   --text-shadow-*: initial;
   /* text shadow + text borders */
-  --text-shadow-md: 5px 4px 3px rgba(0, 0, 0, 0.25), -2px 0 rgba(0, 0, 0, 0.25),
+  --text-shadow-md:
+    5px 4px 3px rgba(0, 0, 0, 0.25), -2px 0 rgba(0, 0, 0, 0.25),
     0 2px rgba(0, 0, 0, 0.25), 2px 0 rgba(0, 0, 0, 0.25),
     0 -2px rgba(0, 0, 0, 0.25);
 }
